--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,15 @@
 body {
     background-color: #2E3440;
     color: #ECEFF4;
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", serif;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     min-height: 100vh;
+    overflow-y: auto;
+    scrollbar-gutter: stable !important;
 }
 
 h1, h2, h3, h4 {
@@ -232,7 +234,7 @@ div.card-container {
 
 /* Scroll bar */
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 60px;
 }
 
 ::-webkit-scrollbar {
